--- a/profesional-next-store-shop/jsconfig.json
+++ b/profesional-next-store-shop/jsconfig.json
@@ -6,7 +6,9 @@
       "@pages/*": ["pages/*"],
       "@components/*": ["components/*"],
       "@common/*": ["common/*"],
-      "@layout/*": ["layout/*"]
+      "@layout/*": ["layout/*"],
+      "@hooks/*": ["hooks/*"],
+      "@services/*": ["services/*"]
     }
   }
 }
