--- a/profesional-next-store-shop/package.json
+++ b/profesional-next-store-shop/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
